@@ -21,6 +21,7 @@ t/12iterator_intersection.t
 t/13add_recurrence.t
 t/14complement.t
 t/15time_zone.t
+t/16bounded_recurrence.t
 lib/DateTime/Set.pm
 lib/DateTime/Span.pm
 lib/DateTime/SpanSet.pm
